# cursor-cli-wrapper

./: Cargo.toml  LICENSE  Makefile  Notifications.md  README.md  config.toml.example
shots/done/: 1.txt
shots/generating/: 1.txt  2.txt  3.txt
shots/thinking/: 1.txt  2.txt  3.txt
src/: config.rs  lib.rs  log.rs  main.rs  monitor.rs  state.rs
