[package]
name = "cursor-cli-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dirs = "6"
libc = "0.2.181"
pty-process = { version = "0.5.3", features = ["async"] }
serde = { version = "1", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
